fix white space on lg screens for contact page

--- a/layouts/DefaultLayout.module.css
+++ b/layouts/DefaultLayout.module.css
@@ -7,6 +7,5 @@
   #contentWrapper {
     margin-top: 92px;
     margin-bottom: 96px;
-    height: calc(100vh - 188px);
   }
 }
